--- a/code.html
+++ b/code.html
@@ -55,7 +55,7 @@ TERMS OF USE: https://nemurou.tumblr.com/tou
 <meta name="color:pagination hover shadow" content="#cbc9df">
 
 <meta name="text:post width" content="450px"/>
-<meta name="text:permalink width" content="250px"/>
+<meta name="text:spacing between side captions and post" content="250px"/>
 
 <meta name="text:blog title" content="Daydream"/> 
 <meta name="text:tagline" content="sample tagline"/> 
@@ -264,7 +264,7 @@ aside {
 }
 
 .postnotes {
-    width:calc({text:post width} + {text:permalink width} + 70px);
+    width:calc({text:post width} + {text:spacing between side captions and post} + 70px);
     border-top:1px solid {color:border};
     padding-top:70px;
     margin:-70px auto 0 auto;
@@ -543,7 +543,7 @@ input:focus:-ms-input-placeholder { color: transparent;}
 .contain {
     display:flex;
     justify-content:space-between;
-    width:calc({text:post width} + {text:permalink width} + 70px);
+    width:calc({text:post width} + {text:spacing between side captions and post} + 70px);
     margin:0px auto 70px auto;
     padding-bottom:70px;
     {block:IndexPage}
@@ -552,7 +552,7 @@ input:focus:-ms-input-placeholder { color: transparent;}
 }
 
 .cap {
-    width:{text:permalink width};
+    width:{text:spacing between side captions and post};
 }
 
 .posts {
